FIX: Fixed flickering on zoom

--- a/src/css/components/cards/_post-card.scss
+++ b/src/css/components/cards/_post-card.scss
@@ -8,11 +8,13 @@
   height: 25vh;
   min-height: 11rem;
   border-radius: 2px;
+
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     transition: transform 0.3s ease;
+    transform: scale(1.0005);
 
     &:hover {
       transform: scale(1.02);
